added config.js and updated README.md accordingly

--- a/profile.html
+++ b/profile.html
@@ -14,6 +14,7 @@
 	<script src="bower_components/json-editor/dist/jsoneditor.js"></script>
   <script src="http://remotestorage.io/release/0.10.1/remotestorage.min.js"></script>
   <script src="https://raw.githubusercontent.com/skddc/sharesome/6521b3e8f2387ac06d4ef9853ee09dbfe5d209d7/vendor/remotestorage/remotestorage-sharesome.js"></script>
+	<script src="config.js"></script>
 	<script src="publish.js"></script>
     
   </head>
