--- a/index.html
+++ b/index.html
@@ -259,9 +259,20 @@
 														</div>
 														<div id="collapseTwo" class="panel-collapse collapse">
 																<div class="panel-body">
-																		<p>Download your profile data and store it wherever you want: In your webserver, on Dropbox, Google Drive, at a friend's website... you choose!<br></p>
+																		<p>Text to be specified here<br></p>
 
-																<a id="step3Option2Btn" href="#" class="btn btn-primary btn-lg">Download profile</a>
+																		<div class="input-group">
+
+																			<input id="existing_profile_field" type="text" class="form-control" placeholder="http://">
+
+																			<span class="input-group-btn">
+
+																				<button id="step3Option2Btn" class="btn btn-default disabled" type="button">Go!</button>
+
+																			</span>
+
+																		</div>
+
 																</div>
 														</div>
 												</div>
@@ -281,8 +292,16 @@
 												</div> -->
 										</div>
 
-										<h4>Still want to do some corrections?</h4>
-										<a id="backToStep2" class="btn btn-default">Go Back</a>
+								</div>
+
+							</div>
+
+							<div class="row">
+
+								<div class="container">
+
+									<h4>Still want to do some corrections?</h4>
+									<a id="backToStep2" class="btn btn-default">Go Back</a>
 
 								</div>
 
