fixing little things

--- a/index.html
+++ b/index.html
@@ -281,8 +281,16 @@
 												</div> -->
 										</div>
 
-										<h4>Still want to do some corrections?</h4>
-										<a id="backToStep2" class="btn btn-default">Go Back</a>
+								</div>
+
+							</div>
+
+							<div class="row">
+
+								<div class="container">
+
+									<h4>Still want to do some corrections?</h4>
+									<a id="backToStep2" class="btn btn-default">Go Back</a>
 
 								</div>
 
