improving-layout almost done. Still need to finish options 2 and 3 in step3

--- a/index.html
+++ b/index.html
@@ -259,9 +259,20 @@
 														</div>
 														<div id="collapseTwo" class="panel-collapse collapse">
 																<div class="panel-body">
-																		<p>Download your profile data and store it wherever you want: In your webserver, on Dropbox, Google Drive, at a friend's website... you choose!<br></p>
+																		<p>Text to be specified here<br></p>
 
-																<a id="step3Option2Btn" href="#" class="btn btn-primary btn-lg">Download profile</a>
+																		<div class="input-group">
+
+																			<input id="existing_profile_field" type="text" class="form-control" placeholder="http://">
+
+																			<span class="input-group-btn">
+
+																				<button id="step3Option2Btn" class="btn btn-default disabled" type="button">Go!</button>
+
+																			</span>
+
+																		</div>
+
 																</div>
 														</div>
 												</div>
