Implementing Issue #15: Implement schema for Organisations, Venues, Events...

--- a/index.html
+++ b/index.html
@@ -199,6 +199,12 @@
 
 									<div class="col-md-10"> <!-- Editor -->
 
+										<ul class="nav nav-tabs" role="tablist">
+										  <li id="tabPerson" class="active"><a >Person</a></li>
+										  <li id="tabOrganisation"><a>Organization</a></li>
+										  <li id="tabPlace"><a>Place</a></li>
+										</ul>
+
 										<div id="editor_holder"></div>
 
 									</div> <!-- Editor -->
@@ -315,7 +321,7 @@
 
 			<hr>
 
-			<div class="footer">
+			<div class="footer footer-static-bottom">
 
 			  <div class="container">
 
