Implementing #18 activate corresponding tab when initEditor from url

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
 										<ul class="nav nav-tabs" role="tablist">
 										  <li id="tabPerson" class="active"><a >Person</a></li>
-										  <li id="tabOrganisation"><a>Organization</a></li>
+										  <li id="tabOrganization"><a>Organization</a></li>
 										  <li id="tabPlace"><a>Place</a></li>
 										</ul>
 
