--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
 								<div class="col-md-12">
 
-									<div id="banner_step3" class="jumbotron">
+									<div class="jumbotron">
 
 										<div class="container">
 
@@ -310,22 +310,28 @@
 
 							</div>
 
-							</div>
-
-							<hr>
-
 							<div class="row">
-
-								<div class="container">
-
-									<h4>Still want to do some corrections?</h4>
-									<a id="backToStep2" class="btn btn-default">Go Back</a>
-
+								<div class="col-md-6">
+									<div id="result-uri"></div>
 								</div>
+							</div>
+
+						</div>
+
+						<hr>
+
+						<div class="row">
+
+							<div class="container">
+
+								<h4>Still want to do some corrections?</h4>
+								<a id="backToStep2" class="btn btn-default">Go Back</a>
 
 							</div>
 
-						</div> <!-- /container -->
+						</div>
+
+					</div> <!-- /container -->
 
 				</div> <!-- step3 --><!-- content --> <!-- content -->
 
