Added lodash to bower.json . added utility functions downloadLocallyStoredProfile, profileHasId, postProfileToDirectory

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="bower_components/FileSaver/FileSaver.min.js"></script>
     <script src="bower_components/node-uuid/uuid.js"></script>
     <script src="bower_components/Blob/Blob.js"></script>
+    <script src="bower_components/lodash/dist/lodash.min.js"></script>
     <script src="config.js"></script>
     <script src="app.js"></script>
 
