login with Persona: prove of concept

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="style.css" />
 
+    <script src="https://login.persona.org/include.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/json-editor/dist/jsoneditor.min.js"></script>
     <script src="bower_components/remotestorage/remotestorage.min.js"></script>
     <script src="bower_components/superagent/superagent.js"></script>
+    <script src="bower_components/es6-promise/promise.js"></script>
     <script src="bower_components/FileSaver/FileSaver.min.js"></script>
     <script src="bower_components/node-uuid/uuid.js"></script>
     <script src="bower_components/Blob/Blob.js"></script>
