--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
                       <button id="tabPerson" profileType="Person" type="button" class="profileSelector btn btn-primary active">Person</button>
                       <button id="tabOrganization" profileType="Organization" type="button" class="profileSelector btn btn-primary">Organization</button>
                       <button id="tabEvent" profileType="Event" type="button" class="profileSelector btn btn-primary">Event</button>
+                      <button id="tabProject" profileType="Project" type="button" class="profileSelector btn btn-primary">Project</button>
                       <button id="tabPlace" profileType="Place" type="button" class="profileSelector btn btn-primary">Place</button>
                     </div>
 
